deploy/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: organigram
  labels:
    app.kubernetes.io/part-of: organigram-opendesk
