deploy/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: organigram
  namespace: organigram
  labels:
    app.kubernetes.io/name: organigram
    app.kubernetes.io/part-of: organigram-opendesk
spec:
  selector:
    app.kubernetes.io/name: organigram
  ports:
    - port: 80
      targetPort: http
      name: http
